--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,7 @@ pod 'React', :path => '../node_modules/react-native', :subspecs => [
   'RCTNetwork',
   'RCTText',
   'RCTWebSocket',
+  'RCTLinkingIOS',
   # Add any other subspecs you want to use in your project
 ]
 pod 'ReactiveCocoa', '~> 4.0.2-alpha-1'
