--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "babel-plugin-syntax-async-functions": "^6.1.4",
+    "babel-plugin-transform-regenerator": "^6.1.4",
+    "babel-polyfill": "^6.1.4",
+    "babel-preset-es2015": "^6.1.4",
     "ddp-client": "git+https://github.com/s10tv/node-ddp-client.git",
+    "instapromise": "^2.0.2",
+    "jasmine-pit": "^2.0.2",
     "lodash": "^3.6.0",
     "react": "^0.14.3",
     "react-native": "^0.15.0",
@@ -19,30 +25,30 @@
     "react-native-video": "^0.6.1",
     "react-redux": "^3.1.0",
     "redux": "^3.0.4",
+    "redux-thunk": "^1.0.0",
     "regenerator": "^0.8.42",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "jest-cli": "^0.8.0"
+    "babel-jest": "^6.0.1",
+    "babel-preset-react": "^6.1.4",
+    "jest-cli": "^0.8.0",
+    "react-addons-test-utils": "~0.14.0"
   },
   "scripts": {
-    "test": "jest",
-    "start": "node_modules/react-native/packager/packager.sh"
+    "test": "jest"
   },
   "jest": {
-    "scriptPreprocessor": "node_modules/react-native/jestSupport/preprocessor.js",
-    "setupEnvScriptFile": "node_modules/react-native/jestSupport/env.js",
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "packager/react-packager/src/Activity/"
-    ],
-    "testFileExtensions": [
-      "js"
-    ],
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
     "unmockedModulePathPatterns": [
-      "promise",
-      "source-map"
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules/"
     ]
   }
 }
