--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "babel-plugin-syntax-async-functions": "^6.1.4",
-    "babel-plugin-transform-regenerator": "^6.1.4",
-    "babel-polyfill": "^6.1.4",
-    "babel-preset-es2015": "^6.1.4",
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.23",
     "ddp-client": "git+https://github.com/s10tv/node-ddp-client.git",
     "instapromise": "^2.0.2",
-    "jasmine-pit": "^2.0.2",
     "lodash": "^3.6.0",
     "react": "^0.14.3",
     "react-native": "^0.15.0",
@@ -31,13 +28,13 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "babel-jest": "^6.0.1",
-    "babel-preset-react": "^6.1.4",
-    "jest-cli": "^0.8.0",
-    "react-addons-test-utils": "~0.14.0"
+    "jasmine-pit": "^2.0.2",
+    "babel-jest": "^5.3.0",
+    "jest-cli": "^0.7.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node_modules/react-native/packager/packager.sh"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
