--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": ["es2015", "react"],
+    "whitelist": [
+        "es7.classProperties",
+        "es7.decorators",
+        "es7.asyncFunctions",
+        "regenerator"
+    ]
 }
