--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "jest-cli": "^0.8.0"
+    "jest-cli": "^0.8.0",
+    "react-addons-test-utils": "^0.14.3",
+    "react": "^0.14.0"
   },
   "scripts": {
     "test": "jest",
