--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^3.0.4",
     "redux": "^3.0.4",
     "redux-thunk": "^1.0.0",
+    "redux-undo": "^0.5.0",
     "regenerator": "^0.8.42",
     "s10-common": "git+https://github.com/s10tv/s10-common.git",
     "underscore": "^1.8.3"
