--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@exponent/react-native-navigator": "^0.3.5",
     "ddp-client": "git+https://github.com/s10tv/node-ddp-client.git",
     "lodash": "^3.6.0",
+    "moment": "^2.10.6",
+    "moment-duration-format": "^1.3.0",
+    "numeral": "^1.5.3",
     "react-native": "^0.15.0",
     "react-native-button": "^1.2.1",
     "react-native-cookies": "0.0.3",
@@ -26,9 +29,10 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "grunt-babel": "^6.0.0",
     "jest-cli": "^0.8.0",
-    "react-addons-test-utils": "^0.14.3",
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.3"
   },
   "scripts": {
     "test": "jest",
