--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@exponent/react-native-navigator": "^0.3.5",
+    "ubc-classes": "git+https://github.com/s10tv/ubc-classes.git",
     "ddp-client": "git+https://github.com/s10tv/node-ddp-client.git",
     "lodash": "^3.6.0",
     "moment": "^2.10.6",
