--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,7 @@ pod 'React', :path => '../node_modules/react-native', :subspecs => [
   'RCTText',
   'RCTWebSocket',
   'RCTLinkingIOS',
+  'RCTVibration',
   # Add any other subspecs you want to use in your project
 ]
 pod 'ReactiveCocoa', '~> 4.0.2-alpha-1'
