--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "numeral": "^1.5.3",
     "react-native": "^0.15.0",
     "react-native-button": "^1.2.1",
+    "react-native-camera": "^0.3.8",
     "react-native-cookies": "0.0.3",
     "react-native-fabric-digits": "git+https://github.com/s10tv/react-native-fabric-digits.git",
     "react-native-fbsdkcore": "0.0.7",
